# project_ne

./: .gitignore  Cargo.toml  README.md  foo.json  sprite.txt
resources/app-icon/: Sprite-0002.aseprite
resources/map/: map1.tmx  map2.tmx  map3.tmx  map4.tmx  map5.tmx  map5raw.tmx
src/: camera.rs  components.rs  game.rs  main.rs  npc.rs  player.rs  prelude.rs  world_gen.rs
src/graphics/: fragment_sprite_batch.glsl  graphics.rs  mod.rs  sprite_batch.rs  vertex_sprite_batch.glsl  window.rs
