[package]
name = "neon_game"
version = "0.1.0"
authors = ["Garrett Graves <gravesg57@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiled = "0.9.2"
sdl2 = { version = "0.34.0", features = ["use-pkgconfig"] }
lazy_static = "1.4.0"

[dependencies.tetra]
version = "0.4"
features = ["sdl2_static_link", "sdl2_bundled"]

[profile.dev.package."*"]
opt-level = 3