[package]
name = "neon_game"
version = "0.1.0"
authors = ["Garrett Graves <gravesg57@gmail.com>"]
edition = "2018"
description = "A dive into Rust game dev"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hecs = "0.2.12"
tiled = "0.9.2"
sdl2 = { version = "0.34.0", features = ["use-pkgconfig"] }
lazy_static = "1.4.0"
ncollide2d = "0.23.2" 
nalgebra = "0.21.1"
nphysics2d = "0.16.1"
rand = "0.7"
luminance = "0.39"
luminance-derive = "0.5"
luminance-glfw = "0.12"
luminance-glyph = "0.1"
glfw = "0.34"
image = {version = "0.23.6", features = ["png"] }
[dependencies.tetra]
path = "../tetra"
features = ["sdl2_static_link", "sdl2_bundled"]

[profile.dev.package."*"]
opt-level = 3

[package.metadata.bundle]
name = "Project_Neon"
identifier = "com.grvy.project-neon"
icon = ["./resources/app-icon/icon991-export.png"]
short_description = "A dive into Rust game dev"